--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "nodema",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./index.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-jwt": "^5.3.1",
@@ -19,12 +20,15 @@
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.4.0",
     "moment": "^2.22.2",
+    "mongodb": "^4.13.0",
     "morgan": "~1.9.0",
     "mount-routes": "^1.0.8",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
     "sequelize": "^4.42.0",
-    "svg-captcha": "^1.3.12"
+    "svg-captcha": "^1.3.12",
+    "taro-plugin-tailwind": "^1.2.8",
+    "typescript": "^4.9.4"
   },
   "repository": {
     "type": "git",
@@ -36,5 +40,11 @@
   "bugs": {
     "url": "https://github.com/lSpikeSpiegel/nodemall/issues"
   },
-  "homepage": "https://github.com/lSpikeSpiegel/nodemall#readme"
+  "homepage": "https://github.com/lSpikeSpiegel/nodemall#readme",
+  "devDependencies": {
+    "@types/mongodb": "^4.0.7",
+    "@vercel/node": "^2.8.14",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-register": "^6.26.0"
+  }
 }
